// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toFichaData HS4 — snapshots (SPEC §5) > acometida baja (120 kPa → grupo de presión necesario) 1`] = `
{
  "datosPartida": [
    {
      "concepto": "Alcance del dimensionado",
      "origen": "Criterio de versión — la red de ACS no se dimensiona (ver observaciones)",
      "valor": "Solo agua fría (AF)",
    },
    {
      "concepto": "Presión disponible en la acometida",
      "origen": "Entrada del usuario",
      "valor": "120 kPa",
    },
    {
      "concepto": "Criterio de simultaneidad",
      "origen": "UNE 149201 — criterio externo (no exigencia CTE)",
      "valor": "K = 1/√(n−1) (UNE 149201)",
    },
    {
      "concepto": "Presión mínima exigida en grifos comunes",
      "origen": "DB-HS4 ap. 2.1.3",
      "valor": "100 kPa",
    },
    {
      "concepto": "Presión mínima exigida en fluxores / calentadores",
      "origen": "DB-HS4 ap. 2.1.3",
      "valor": "150 kPa",
    },
    {
      "concepto": "Presión máxima admisible en puntos de consumo",
      "origen": "DB-HS4 ap. 2.1.3",
      "valor": "500 kPa",
    },
    {
      "concepto": "Aparato — Lavabo (bano-lavabo)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Inodoro con cisterna (bano-inodoro)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Bañera (≥ 1,40 m) (bano-banera)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,3 dm³/s",
    },
    {
      "concepto": "Aparato — Bidé (bano-bide)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Lavabo (aseo-lavabo)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Inodoro con cisterna (aseo-inodoro)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Ducha (aseo-ducha)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,2 dm³/s",
    },
    {
      "concepto": "Aparato — Fregadero doméstico (coc-fregadero)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,2 dm³/s",
    },
    {
      "concepto": "Aparato — Lavavajillas doméstico (coc-lavavajillas)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,15 dm³/s",
    },
    {
      "concepto": "Aparato — Lavadora doméstica (coc-lavadora)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,2 dm³/s",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-lavabo)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-inodoro)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-banera)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-bide)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación particular (ramal-bano)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=3 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-aseo-lavabo)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-aseo-inodoro)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-aseo-ducha)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación particular (ramal-aseo)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=3 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-coc-fregadero)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-coc-lavavajillas)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-coc-lavadora)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación particular (ramal-cocina)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=4 m",
    },
    {
      "concepto": "Tramo — Derivación particular (deriv-particular)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=4 m",
    },
    {
      "concepto": "Tramo — Columna / montante (montante)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=6 m · Δh=3 m",
    },
    {
      "concepto": "Tramo — Tubo de alimentación (alimentacion)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=5 m",
    },
    {
      "concepto": "Tramo — Acometida (acometida)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=3 m",
    },
  ],
  "edicionDB": "DB-HS4 (2009)",
  "engineVersion": "0.1.0",
  "inputs": {
    "aparatos": [
      {
        "id": "bano-lavabo",
        "tipo": "lavabo",
        "tramoId": "d-bano-lavabo",
      },
      {
        "id": "bano-inodoro",
        "tipo": "inodoro_cisterna",
        "tramoId": "d-bano-inodoro",
      },
      {
        "id": "bano-banera",
        "tipo": "banera_ge_140",
        "tramoId": "d-bano-banera",
      },
      {
        "id": "bano-bide",
        "tipo": "bide",
        "tramoId": "d-bano-bide",
      },
      {
        "id": "aseo-lavabo",
        "tipo": "lavabo",
        "tramoId": "d-aseo-lavabo",
      },
      {
        "id": "aseo-inodoro",
        "tipo": "inodoro_cisterna",
        "tramoId": "d-aseo-inodoro",
      },
      {
        "id": "aseo-ducha",
        "tipo": "ducha",
        "tramoId": "d-aseo-ducha",
      },
      {
        "id": "coc-fregadero",
        "tipo": "fregadero_domestico",
        "tramoId": "d-coc-fregadero",
      },
      {
        "id": "coc-lavavajillas",
        "tipo": "lavavajillas_domestico",
        "tramoId": "d-coc-lavavajillas",
      },
      {
        "id": "coc-lavadora",
        "tipo": "lavadora_domestica",
        "tramoId": "d-coc-lavadora",
      },
    ],
    "criterioK": "une149201",
    "presionAcometida_kPa": 120,
    "tramos": [
      {
        "id": "d-bano-lavabo",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-bano-inodoro",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-bano-banera",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-bano-bide",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-aseo-lavabo",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-aseo",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-aseo-inodoro",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-aseo",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-aseo-ducha",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-aseo",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-coc-fregadero",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-cocina",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-coc-lavavajillas",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-cocina",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-coc-lavadora",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-cocina",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "ramal-bano",
        "longitud_m": 3,
        "material": "termoplastico_multicapa",
        "parentId": "deriv-particular",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "cuarto_humedo_privado",
      },
      {
        "id": "ramal-aseo",
        "longitud_m": 3,
        "material": "termoplastico_multicapa",
        "parentId": "deriv-particular",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "cuarto_humedo_privado",
      },
      {
        "id": "ramal-cocina",
        "longitud_m": 4,
        "material": "termoplastico_multicapa",
        "parentId": "deriv-particular",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "cuarto_humedo_privado",
      },
      {
        "id": "deriv-particular",
        "longitud_m": 4,
        "material": "metalica",
        "parentId": "montante",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "derivacion_particular",
      },
      {
        "altura_m": 3,
        "id": "montante",
        "longitud_m": 6,
        "material": "metalica",
        "parentId": "alimentacion",
        "tipo": "columna_montante",
        "tramoAlimentacion": "columna_montante",
      },
      {
        "id": "alimentacion",
        "longitud_m": 5,
        "material": "metalica",
        "parentId": "acometida",
        "tipo": "tubo_alimentacion",
        "tramoAlimentacion": "distribuidor_principal",
      },
      {
        "id": "acometida",
        "longitud_m": 3,
        "material": "metalica",
        "parentId": null,
        "tipo": "acometida",
        "tramoAlimentacion": "distribuidor_principal",
      },
    ],
  },
  "normativa": [
    {
      "articulo": "Tabla 2.1",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "Tabla 4.2",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "Tabla 4.3",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "ap. 4.2 d)",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "ap. 2.1.3",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "ap. 4.2.1",
      "db": "DB-HS4",
      "edicion": "2009",
      "exigencia": "UNE 149201 — criterio externo (no exigencia CTE)",
    },
    {
      "articulo": "ap. 4.2 / 4.5",
      "db": "DB-HS4",
      "edicion": "2009",
      "exigencia": "Pérdidas localizadas — buena práctica de cálculo (no exigencia CTE)",
    },
  ],
  "observaciones": [
    "Coeficiente de simultaneidad K = 1/√(n−1): CRITERIO EXTERNO (UNE 149201), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado").",
    "Punto de consumo "bano-lavabo": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-inodoro": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-banera": presión residual 83.0 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "bano-bide": presión residual 82.8 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-lavabo": presión residual 83.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-inodoro": presión residual 83.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "aseo-ducha": presión residual 80.2 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-fregadero": presión residual 78.9 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-lavavajillas": presión residual 80.5 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Punto de consumo "coc-lavadora": presión residual 82.5 kPa < mínima exigida 100 kPa (ap. 2.1.3).",
    "Grupo de presión NECESARIO (ap. 4.5): el punto de peor margen "coc-fregadero" (78.9 kPa) no alcanza su mínima exigida 100 kPa (o algún otro punto de consumo presenta déficit).",
    "Presión ORIENTATIVA (predimensionado): los valores de presión residual, presión en el punto crítico y la necesidad de grupo de presión (ap. 4.5) se obtienen con un modelo de pérdida de carga simplificado (no Darcy-Weisbach / Colebrook). Es una estimación de predimensionado que NO sustituye un cálculo hidráulico de detalle.",
    "Alcance del cálculo: esta versión dimensiona ÚNICAMENTE la red de AGUA FRÍA (AF). La red de ACS (agua caliente sanitaria) NO se dimensiona en esta versión —no se calculan sus caudales, diámetros, presiones ni recirculación—; no debe asumirse cobertura de ACS.",
    "Criterios externos al DB-HS4 (no exigencias CTE): el coeficiente de simultaneidad K = 1/√(n−1) procede de UNE 149201; el DB-HS4 sólo remite a "un criterio adecuado" (ap. 4.2.1). La estimación de pérdidas localizadas (20–30 % de las longitudinales) es buena práctica de cálculo de predimensionado, no cifra del DB. La selección de diámetros usa una serie de Ø comerciales (12/16/20/25/32/40/50/63/75/90/110 mm): es un CRITERIO DE PROYECTO, no exigencia del CTE (el DB-HS4 sólo fija los Ø MÍNIMOS de las Tablas 4.2 y 4.3, que se respetan como cota inferior).",
  ],
  "slug": "hs4-fontaneria",
  "svg": {
    "caption": "Esquema de la red de suministro: árbol de tramos con Ø, caudal de cálculo, velocidad y presión residual; recorrido crítico resaltado.",
    "elementId": "hs4-svg-pdf",
    "nativeH": 462,
    "nativeW": 894,
  },
  "titulo": "HS4 — Suministro de agua (fontanería)",
  "veredictoGlobal": "fail",
  "verificaciones": [
    {
      "concepto": "Derivación de aparato (d-bano-lavabo)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=82,8 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-bano-inodoro)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=82,8 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-bano-banera)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=83 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=0,95 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-bano-bide)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=82,8 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación particular (ramal-bano)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=83,6 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=1,1 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-aseo-lavabo)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=83,2 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-aseo-inodoro)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=83,2 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-aseo-ducha)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=80,2 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=1,77 m/s",
    },
    {
      "concepto": "Derivación particular (ramal-aseo)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=84 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=0,9 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-coc-fregadero)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=78,9 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=1,77 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-coc-lavavajillas)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=80,5 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=1,33 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-coc-lavadora)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=82,5 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=0,64 m/s",
    },
    {
      "concepto": "Derivación particular (ramal-cocina)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=82,8 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=1,24 m/s",
    },
    {
      "concepto": "Derivación particular (deriv-particular)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=85 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Columna / montante (montante)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=86,2 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Tubo de alimentación (alimentacion)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=117,5 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Acometida (acometida)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=119,1 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Presión en el punto crítico — Fregadero doméstico (coc-fregadero) (presión estimada — predimensionado)",
      "estado": "fail",
      "limite": "≥ 100 kPa",
      "referencia": "DB-HS4 ap. 2.1.3",
      "valor": "78,9 kPa (orientativa)",
    },
    {
      "concepto": "Grupo de presión (ap. 4.5) — sobre presión estimada (predimensionado)",
      "estado": "fail",
      "limite": "Pr punto crítico ≥ 100 kPa",
      "referencia": "DB-HS4 ap. 4.5",
      "valor": "Necesario",
    },
  ],
}
`;

exports[`toFichaData HS4 — snapshots (SPEC §5) > vivienda realista (defaults, 250 kPa → CUMPLE) 1`] = `
{
  "datosPartida": [
    {
      "concepto": "Alcance del dimensionado",
      "origen": "Criterio de versión — la red de ACS no se dimensiona (ver observaciones)",
      "valor": "Solo agua fría (AF)",
    },
    {
      "concepto": "Presión disponible en la acometida",
      "origen": "Entrada del usuario",
      "valor": "250 kPa",
    },
    {
      "concepto": "Criterio de simultaneidad",
      "origen": "UNE 149201 — criterio externo (no exigencia CTE)",
      "valor": "K = 1/√(n−1) (UNE 149201)",
    },
    {
      "concepto": "Presión mínima exigida en grifos comunes",
      "origen": "DB-HS4 ap. 2.1.3",
      "valor": "100 kPa",
    },
    {
      "concepto": "Presión mínima exigida en fluxores / calentadores",
      "origen": "DB-HS4 ap. 2.1.3",
      "valor": "150 kPa",
    },
    {
      "concepto": "Presión máxima admisible en puntos de consumo",
      "origen": "DB-HS4 ap. 2.1.3",
      "valor": "500 kPa",
    },
    {
      "concepto": "Aparato — Lavabo (bano-lavabo)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Inodoro con cisterna (bano-inodoro)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Bañera (≥ 1,40 m) (bano-banera)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,3 dm³/s",
    },
    {
      "concepto": "Aparato — Bidé (bano-bide)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Lavabo (aseo-lavabo)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Inodoro con cisterna (aseo-inodoro)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,1 dm³/s",
    },
    {
      "concepto": "Aparato — Ducha (aseo-ducha)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,2 dm³/s",
    },
    {
      "concepto": "Aparato — Fregadero doméstico (coc-fregadero)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,2 dm³/s",
    },
    {
      "concepto": "Aparato — Lavavajillas doméstico (coc-lavavajillas)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,15 dm³/s",
    },
    {
      "concepto": "Aparato — Lavadora doméstica (coc-lavadora)",
      "origen": "DB-HS4 Tabla 2.1",
      "valor": "0,2 dm³/s",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-lavabo)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-inodoro)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-banera)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-bano-bide)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación particular (ramal-bano)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=3 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-aseo-lavabo)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-aseo-inodoro)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=1,5 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-aseo-ducha)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación particular (ramal-aseo)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=3 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-coc-fregadero)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-coc-lavavajillas)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación de aparato (d-coc-lavadora)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=2 m",
    },
    {
      "concepto": "Tramo — Derivación particular (ramal-cocina)",
      "origen": "Entrada del usuario · v∈[0,5, 3,5 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Termoplástico / multicapa · L=4 m",
    },
    {
      "concepto": "Tramo — Derivación particular (deriv-particular)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=4 m",
    },
    {
      "concepto": "Tramo — Columna / montante (montante)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=6 m · Δh=3 m",
    },
    {
      "concepto": "Tramo — Tubo de alimentación (alimentacion)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=5 m",
    },
    {
      "concepto": "Tramo — Acometida (acometida)",
      "origen": "Entrada del usuario · v∈[0,5, 2 m/s] (DB-HS4 ap. 4.2 d))",
      "valor": "Metálica · L=3 m",
    },
  ],
  "edicionDB": "DB-HS4 (2009)",
  "engineVersion": "0.1.0",
  "inputs": {
    "aparatos": [
      {
        "id": "bano-lavabo",
        "tipo": "lavabo",
        "tramoId": "d-bano-lavabo",
      },
      {
        "id": "bano-inodoro",
        "tipo": "inodoro_cisterna",
        "tramoId": "d-bano-inodoro",
      },
      {
        "id": "bano-banera",
        "tipo": "banera_ge_140",
        "tramoId": "d-bano-banera",
      },
      {
        "id": "bano-bide",
        "tipo": "bide",
        "tramoId": "d-bano-bide",
      },
      {
        "id": "aseo-lavabo",
        "tipo": "lavabo",
        "tramoId": "d-aseo-lavabo",
      },
      {
        "id": "aseo-inodoro",
        "tipo": "inodoro_cisterna",
        "tramoId": "d-aseo-inodoro",
      },
      {
        "id": "aseo-ducha",
        "tipo": "ducha",
        "tramoId": "d-aseo-ducha",
      },
      {
        "id": "coc-fregadero",
        "tipo": "fregadero_domestico",
        "tramoId": "d-coc-fregadero",
      },
      {
        "id": "coc-lavavajillas",
        "tipo": "lavavajillas_domestico",
        "tramoId": "d-coc-lavavajillas",
      },
      {
        "id": "coc-lavadora",
        "tipo": "lavadora_domestica",
        "tramoId": "d-coc-lavadora",
      },
    ],
    "criterioK": "une149201",
    "presionAcometida_kPa": 250,
    "tramos": [
      {
        "id": "d-bano-lavabo",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-bano-inodoro",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-bano-banera",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-bano-bide",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-bano",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-aseo-lavabo",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-aseo",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-aseo-inodoro",
        "longitud_m": 1.5,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-aseo",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-aseo-ducha",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-aseo",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-coc-fregadero",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-cocina",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-coc-lavavajillas",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-cocina",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "d-coc-lavadora",
        "longitud_m": 2,
        "material": "termoplastico_multicapa",
        "parentId": "ramal-cocina",
        "tipo": "derivacion_aparato",
      },
      {
        "id": "ramal-bano",
        "longitud_m": 3,
        "material": "termoplastico_multicapa",
        "parentId": "deriv-particular",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "cuarto_humedo_privado",
      },
      {
        "id": "ramal-aseo",
        "longitud_m": 3,
        "material": "termoplastico_multicapa",
        "parentId": "deriv-particular",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "cuarto_humedo_privado",
      },
      {
        "id": "ramal-cocina",
        "longitud_m": 4,
        "material": "termoplastico_multicapa",
        "parentId": "deriv-particular",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "cuarto_humedo_privado",
      },
      {
        "id": "deriv-particular",
        "longitud_m": 4,
        "material": "metalica",
        "parentId": "montante",
        "tipo": "derivacion_particular",
        "tramoAlimentacion": "derivacion_particular",
      },
      {
        "altura_m": 3,
        "id": "montante",
        "longitud_m": 6,
        "material": "metalica",
        "parentId": "alimentacion",
        "tipo": "columna_montante",
        "tramoAlimentacion": "columna_montante",
      },
      {
        "id": "alimentacion",
        "longitud_m": 5,
        "material": "metalica",
        "parentId": "acometida",
        "tipo": "tubo_alimentacion",
        "tramoAlimentacion": "distribuidor_principal",
      },
      {
        "id": "acometida",
        "longitud_m": 3,
        "material": "metalica",
        "parentId": null,
        "tipo": "acometida",
        "tramoAlimentacion": "distribuidor_principal",
      },
    ],
  },
  "normativa": [
    {
      "articulo": "Tabla 2.1",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "Tabla 4.2",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "Tabla 4.3",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "ap. 4.2 d)",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "ap. 2.1.3",
      "db": "DB-HS4",
      "edicion": "2009",
    },
    {
      "articulo": "ap. 4.2.1",
      "db": "DB-HS4",
      "edicion": "2009",
      "exigencia": "UNE 149201 — criterio externo (no exigencia CTE)",
    },
    {
      "articulo": "ap. 4.2 / 4.5",
      "db": "DB-HS4",
      "edicion": "2009",
      "exigencia": "Pérdidas localizadas — buena práctica de cálculo (no exigencia CTE)",
    },
  ],
  "observaciones": [
    "Coeficiente de simultaneidad K = 1/√(n−1): CRITERIO EXTERNO (UNE 149201), NO exigencia del DB-HS4 (el DB remite a "un criterio adecuado").",
    "Presión ORIENTATIVA (predimensionado): los valores de presión residual, presión en el punto crítico y la necesidad de grupo de presión (ap. 4.5) se obtienen con un modelo de pérdida de carga simplificado (no Darcy-Weisbach / Colebrook). Es una estimación de predimensionado que NO sustituye un cálculo hidráulico de detalle.",
    "Alcance del cálculo: esta versión dimensiona ÚNICAMENTE la red de AGUA FRÍA (AF). La red de ACS (agua caliente sanitaria) NO se dimensiona en esta versión —no se calculan sus caudales, diámetros, presiones ni recirculación—; no debe asumirse cobertura de ACS.",
    "Criterios externos al DB-HS4 (no exigencias CTE): el coeficiente de simultaneidad K = 1/√(n−1) procede de UNE 149201; el DB-HS4 sólo remite a "un criterio adecuado" (ap. 4.2.1). La estimación de pérdidas localizadas (20–30 % de las longitudinales) es buena práctica de cálculo de predimensionado, no cifra del DB. La selección de diámetros usa una serie de Ø comerciales (12/16/20/25/32/40/50/63/75/90/110 mm): es un CRITERIO DE PROYECTO, no exigencia del CTE (el DB-HS4 sólo fija los Ø MÍNIMOS de las Tablas 4.2 y 4.3, que se respetan como cota inferior).",
  ],
  "slug": "hs4-fontaneria",
  "svg": {
    "caption": "Esquema de la red de suministro: árbol de tramos con Ø, caudal de cálculo, velocidad y presión residual; recorrido crítico resaltado.",
    "elementId": "hs4-svg-pdf",
    "nativeH": 462,
    "nativeW": 894,
  },
  "titulo": "HS4 — Suministro de agua (fontanería)",
  "veredictoGlobal": "ok",
  "verificaciones": [
    {
      "concepto": "Derivación de aparato (d-bano-lavabo)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=212,8 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-bano-inodoro)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=212,8 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-bano-banera)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=213 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=0,95 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-bano-bide)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=212,8 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación particular (ramal-bano)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=213,6 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=1,1 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-aseo-lavabo)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=213,2 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-aseo-inodoro)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=213,2 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=0,88 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-aseo-ducha)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=210,2 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=1,77 m/s",
    },
    {
      "concepto": "Derivación particular (ramal-aseo)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=214 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=0,9 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-coc-fregadero)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=208,9 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=1,77 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-coc-lavavajillas)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=210,5 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø12 mm · v=1,33 m/s",
    },
    {
      "concepto": "Derivación de aparato (d-coc-lavadora)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=212,5 kPa",
      "referencia": "DB-HS4 Tabla 4.2 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=0,64 m/s",
    },
    {
      "concepto": "Derivación particular (ramal-cocina)",
      "estado": "ok",
      "limite": "v∈[0,5, 3,5 m/s] · Pr=212,8 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø20 mm · v=1,24 m/s",
    },
    {
      "concepto": "Derivación particular (deriv-particular)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=215 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Columna / montante (montante)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=216,2 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Tubo de alimentación (alimentacion)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=247,5 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Acometida (acometida)",
      "estado": "ok",
      "limite": "v∈[0,5, 2 m/s] · Pr=249,1 kPa",
      "referencia": "DB-HS4 Tabla 4.3 · DB-HS4 ap. 4.2 d) · Serie de Ø comerciales: criterio de proyecto, no exigencia CTE",
      "valor": "Ø25 mm · v=1,05 m/s",
    },
    {
      "concepto": "Presión en el punto crítico — Fregadero doméstico (coc-fregadero) (presión estimada — predimensionado)",
      "estado": "ok",
      "limite": "≥ 100 kPa",
      "referencia": "DB-HS4 ap. 2.1.3",
      "valor": "208,9 kPa (orientativa)",
    },
    {
      "concepto": "Grupo de presión (ap. 4.5) — sobre presión estimada (predimensionado)",
      "estado": "ok",
      "limite": "Pr punto crítico ≥ 100 kPa",
      "referencia": "DB-HS4 ap. 4.5",
      "valor": "No necesario",
    },
  ],
}
`;
